--- a/style.css
+++ b/style.css
@@ -135,3 +135,18 @@ button:hover {
     margin-left: 50px;
     width: 200px;
 }
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+    
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  
+}
